--- a/index.html
+++ b/index.html
@@ -1127,11 +1127,11 @@ footer{
                 </div>
             
                 <div class="cont cont-form">
-                    <form action="#">
+                    <form name="submit-to-google-sheet">
                         <h3>Contact Us</h3>
-                        <input type="text" name="name" id="name" placeholder="NAME">
-                        <input type="email" placeholder="EMAIL">
-                        <input type="tel" name="number" id="number" placeholder="Number">
+                        <input type="text" name="Name" id="name" placeholder="NAME">
+                        <input type="email" name="Email" placeholder="EMAIL">
+                        <input type="tel" name="Phone" id="number" placeholder="Number">
                         <button value="go">Send</button>
                     </form>
                 </div>
@@ -1311,6 +1311,37 @@ document.getElementById('toggleButton').addEventListener('click', function () {
                 });
             });
         });
+
+    
+    document.addEventListener('DOMContentLoaded', function () {
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwJWUSGCc2wSne5zX4-vj3ByRDr2zhuIYEW5mtI-_8ClJM1eVYCHtgmhb7p5K88mF2FWA/exec';
+
+    document.forms['submit-to-google-sheet'].addEventListener('submit', function (e) {
+        e.preventDefault();
+
+        // Reference the form directly using the 'this' keyword
+        const form = this;
+
+        // Send form data to Google Sheets
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+            .then(response => {
+                console.log('Success!', response);
+
+                // Clear the form after 3 seconds
+                setTimeout(function () {
+                    clearForm(form);
+                }, 0.1);
+            })
+            .catch(error => console.error('Error!', error.message));
+    });
+
+    // Function to clear the form fields
+    function clearForm(form) {
+        form.reset();
+        console.log('Form cleared!');
+    }
+});
+
     </script>
 </body>
 </html>
