--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,9 @@ footer{
     </footer>
 
     <script>
-
+document.addEventListener('contextmenu', function (e) {
+      e.preventDefault();
+    });
         /*----------------------------------------------------------------------------------------------------------------*/
                                                 /* SLIDEBAR FOR MOBILE */
 /*----------------------------------------------------------------------------------------------------------------*/
