--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr.Perfect</title>
+    <script>
+    document.addEventListener('contextmenu', function (e) {
+      e.preventDefault();
+    });
+  </script>
     <style>
         html{
             scroll-behavior: smooth;
@@ -1175,9 +1180,6 @@ footer{
     </footer>
 
     <script>
-document.addEventListener('contextmenu', function (e) {
-      e.preventDefault();
-    });
         /*----------------------------------------------------------------------------------------------------------------*/
                                                 /* SLIDEBAR FOR MOBILE */
 /*----------------------------------------------------------------------------------------------------------------*/
