--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@ footer{
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" />
                         <path d="M3 7l9 6l9 -6" />
-                      </svg></span>muthudmj2@gmail.com</p>
+                      </svg></span>muthamizhselvan3112@gmail.com</p>
                 </div>
             
                 <div class="cont cont-form">
@@ -1174,7 +1174,7 @@ footer{
             <br>
             <hr style="color: white; width: 80%; margin: 0 auto;">
             <div class="footerbottom">
-                <p>Copyright &copy;2023; Designd by <span class="Designer">Tamizh</span></p>
+                <p>Copyright &copy;2023; Designd by <span class="Designer">Muthamizh</span></p>
             </div>
         </div>
     </footer>
